--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-  integrity="sha384-DTvz5aMu29+7Lg5hhaMokH+L9v9EXh+ZJpwANZKhk2ckwqzs3+JU5r5U6wwG1xlD"
-  crossorigin="anonymous">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-DTvz5aMu29+7Lg5hhaMokH+L9v9EXh+ZJpwANZKhk2ckwqzs3+JU5r5U6wwG1xlD" crossorigin="anonymous">
+    <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
